Adding backend again

--- a/fisherds-hangout-gcm/app.yaml
+++ b/fisherds-hangout-gcm/app.yaml
@@ -19,7 +19,8 @@ handlers:
 #JavaScript client
 - url: /
   static_files: static/index.html
-  upload: static/index\.html  
+  upload: static/index\.html
+  secure: always
   
 #Server template client
 - url: .*
